<resources>
    <string name="app_name">SPapp</string>
    <string name="google_login">Google Login</string>
    <string name="accept_terms"><![CDATA[By proceeding with creating account you agree to our Terms & Condition and private policy]]></string>
    <string name="you_need_to_sign_in_or_create_a_new_account_to_continue">You Need to sign in or create a new account to continue.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="continue_btn">Continue</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu">Menu</string>

    <!--<string name="google_maps_api_key">AIzaSyAWCv_AH-PVWh5jgrvoqVNgsR5wOAbE3Fw</string>-->
    <string name="google_maps_api_key">AIzaSyD2RJHbp9QE5BbzbQEZt9P5syKa1oROtzg</string>
    <string name="share_parking">Share Parking</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="create_account">Create Account?</string>
    <string name="register_with_us">Register With Us</string>
    <string name="search_for_parking">Search For Parking</string>
    <string name="profile">Profile</string>
    <string name="rent_out_space">Rent Out Space</string>
    <string name="logout">Logout</string>
    <string name="search_here">Search here</string>
    <string name="edit">Edit</string>
    <string name="remove_account">Remove account</string>
    <string name="welcome_to_share_parking">Welcome to Share Parking</string>
    <string name="login_to_continue">Login To Continue</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="step_1">Step 1</string>
    <string name="parking_location">Parking Location</string>
    <string name="step_2">Step 2</string>
    <string name="parking_information">Parking Information</string>
    <string name="step_1_nparking_location">Step 1\nParking Location</string>
    <string name="step_2_nparking_information">Step 2\nParking Information</string>
    <string name="where_is_you_parking_space">Where is you parking Space ?</string>
    <string name="pincode">Pincode*</string>
    <string name="what_is_the_address_of_your_parking_space">What is the address of your parking Space? *</string>
    <string name="only_shown_when_drivers_book_your_space">Only Shown when drivers book your space</string>
    <string name="done_location">Done Location</string>
    <string name="where_is_the_entrance_of_your_space">Where is the Entrance of your space?</string>
    <string name="drag_pin_to_select_location">Drag the pin to the entrance of your space(and not on top of your building). Setting this correctly is the key to ensuring people can find you location.</string>
    <string name="go_back">Go Back</string>
    <string name="set_you_space_s_picture">Set you Space\'s Picture *</string>
    <string name="add_image">+ Add Image</string>
    <string name="how_many_spaced_do_you_have_for_rent">How many spaced do you have for rent? *</string>
    <string name="what_is_the_largest_vehicle_your_space_can_accommodate">What is the largest vehicle your space can accommodate? *</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="estate_or_4x4">Estate or 4x4</string>
    <string name="van">Van</string>
    <string name="large_van_or_nminibus">Large Van or\nMinibus</string>
    <string name="select_the_largest_vehicle_possible_that_can_fit_through_the_entrance_and_into_the_space_itself">Select the largest vehicle possible that can fit through the entrance and into the space itself.</string>
    <string name="_0">0</string>
    <string name="access_information">Access Information *</string>
    <string name="tick_the_box_for_options_that_apply_to_your_space">Tick the box for options that apply to your space</string>
    <string name="my_space_has_a_height_restriction_when_accessing_it">My Space has a height restriction when accessing it</string>
    <string name="my_space_requires_a_permit">My Space requires a permit</string>
    <string name="my_space_is_marked_with_a_letter_or_number">My Space is marked with a letter or number</string>
    <string name="my_space_requires_a_key_or_security_or_fob_to_open_a_gate">My space requires a key or security or fob to open a gate</string>
    <string name="my_space_requires_a_security_code_to_open_a_gate">My space requires a security code to open a gate</string>
    <string name="about_your_space_and_local_area">About your space and local area *</string>
    <string name="about_space_text">Write something here to help drivers choose your space. Any selling points e.g. how far is it from tranport links or any nearby attractions(in minutes)? Anything drivers should be aware of before booking.</string>
    <string name="don_t_include_any_contact_details_or_sensitive_information">Don\'t include any contact details or sensitive information</string>
    <string name="access_instructions">Access Instructions</string>
    <string name="these_are_the_instructions_that_drivers_will_receive_once_they_have_paid_to_reserve_your_space">These are the instructions that drivers will receive once they have paid to reserve your space</string>
    <string name="what_features_does_your_location_offer">What features does your location offer?</string>
    <string name="secured_gate">Secured Gate</string>
    <string name="cctv">CCTV</string>
    <string name="electric_vehicle_charging">Electric vehicle charging</string>
    <string name="disabled_access">Disabled access</string>
    <string name="lighting">Lighting</string>
    <string name="covered_parking">Covered Parking</string>
    <string name="airport_transfers">Airport Transfers</string>
    <string name="space_facilities">Space Facilities</string>
    <string name="securely_gated">Securely Gated</string>
    <string name="apply_and_search">Apply and Search</string>
    <string name="clear">Clear</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_spaces">Your Spaces</string>
    <string name="help">Help</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="total_price">Total Price</string>
    <string name="to_destination">To Destination</string>
    <string name="some_random_address">224-238 Kensington High St, Kensington, London W8 6AG, United Kingdom</string>
</resources>
