<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="app.shareparking.com.spapp.features.search.SearchViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/material_light_white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/close_drawer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:onClick="@{viewModel::closeDrawerClick}"
                    android:src="@drawable/ic_close" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/space_facilities"
                    android:textColor="@color/material_light_black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/clear_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:padding="10dp"
                    android:text="@string/clear"
                    android:onClick="@{viewModel::clearFilterClick}"
                    android:textColor="@color/material_light_black"
                    android:textSize="16sp" />

            </LinearLayout>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/securely_gated" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginStart="10dp"
                android:background="@color/grey" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/cctv" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginStart="10dp"
                android:background="@color/grey" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/disabled_access" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginStart="10dp"
                android:background="@color/grey" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/lighting" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginStart="10dp"
                android:background="@color/grey" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/covered_parking" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginStart="10dp"
                android:background="@color/grey" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/airport_transfers" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:background="@drawable/bg_black_round"
            android:text="@string/apply_and_search"
            android:textAllCaps="false"
            android:onClick="@{viewModel::applyFilterClick}"
            android:textColor="@color/material_light_white" />

    </RelativeLayout>

</layout>