<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="app.shareparking.com.spapp.features.home.ui.menu.MenuViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/material_light_white"
        tools:context=".features.home.ui.menu.MenuFragment"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentInsetStart="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/menu"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="@color/material_light_black"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:padding="20dp"
        android:onClick="@{viewModel::onProfileClick}"
        android:textColor="@color/material_light_black"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/grey"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rent_out_space"
            android:padding="20dp"
            android:onClick="@{viewModel::onRentOutClick}"
            android:textColor="@color/material_light_black"
            android:textSize="16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/grey"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:padding="20dp"
            android:onClick="@{viewModel::onLogoutClick}"
            android:textColor="@color/material_light_black"
            android:textSize="16sp"/>

    </LinearLayout>

</layout>